--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "author": "kenn2k <antonshkreba.a@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
+    "@mui/material": "^7.3.7",
+    "@mui/x-data-grid": "^8.26.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.12.0"
   },
   "scripts": {
     "start": "webpack serve --mode development",
